--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -231,6 +231,17 @@
                     <div class="section large" style="padding-bottom:0">
                         <div class="semi-auto semi-left-80">
                             <div class="semi-fixed-left text-center">
+                                总价格：
+                            </div>
+                            <div style="padding-bottom:8px;">
+                                {{input.total}}
+                            </div>
+                            <div class="kk-line kk-horizon bg-gray-lighter"></div>
+                        </div>
+                    </div>
+                    <div class="section large" style="padding-bottom:0">
+                        <div class="semi-auto semi-left-80">
+                            <div class="semi-fixed-left text-center">
                                 地点：
                             </div>
                             <div style="padding-bottom:8px;">
