--- a/src/templates/translator.html
+++ b/src/templates/translator.html
@@ -58,7 +58,7 @@
                         <span ng-if="translator.profession_identity"><i class="kk kk-40 kk-authen-3" ></i></span>
                         <span ng-if="translator.advanced_identity !=''"><i class="kk kk-40 kk-authen-4" ></i></span>
                     </div>
-                    <div class="text-right" ng-show="authens.length >0">
+                    <div class="text-right" ng-show="authens.length >0" ui-turn-on="authen_panel">
                         查看详细
                     </div>
                 </div>
@@ -157,9 +157,30 @@
             <span class="btn btn-danger rectangle">
                 发送申请
             </span>
-            <span class="btn bg-gray text-white rectangle">
+            <span class="btn bg-gray text-white rectangle" ng-click="like()" ng-if="translator.is_collection == 0">
                 收藏此人
             </span>
+            <span class="btn btn-primary text-white rectangle" ng-click="unlike()" ng-if="translator.is_collection == 1">
+                取消收藏
+            </span>
+        </div>
+    </div>
+</div>
+<div ui-content-for="modals">
+    <div class="modal modal-overlay" ui-if="authen_panel" ui-state='authen_panel'>
+        <!-- <div class="modal-backdrop in"></div> -->
+        <div class="modal-dialog" style="margin:0">
+            <div class="modal-content">
+                <div class="modal-header text-primary clearfix">
+                    <div class="pull-left section section-condensed bg-transparent" ui-turn-off="authen_panel">
+                        <i class="fa fa-chevron-left" style="position:relative;top:3px"></i>
+                    </div>
+                    <h4 class="modal-title text-center">认证详情</h4>
+                </div>
+                <div class="modal-body">
+                    <img ng-src="{{staticImageUrl+authen}}" class="block full-width" ng-repeat="authen in authens"/>
+                </div>
+            </div>
         </div>
     </div>
 </div>
