--- a/src/less/icon.less
+++ b/src/less/icon.less
@@ -133,49 +133,43 @@
     }
     &.kk-male {
         background-size: 50%;
-        background-image: url("../images/man.png")
+        background-image: url("../images/sex.png")
     }
     &.kk-hourglass {
         position: relative;
         top: -1px;
-        width:15px;
+        width: 15px;
         height: 15px;
         background-size: 60%;
         background-image: url("../images/hourglass.png")
     }
-    &.kk-like-1 {
-        width: 90px;
-        height: 26px;
+    &.kk-like {
+        width: 12px;
+        height: 12px;
+        margin: 0 5px 0 0;
+        position: relative;
+        top: -2px;
         background-size: 100%;
         background-image: url("../images/like_1.png")
     }
-    &.kk-like-2 {
-        width: 90px;
-        height: 26px;
+    &.kk-like.active {
         background-size: 100%;
         background-image: url("../images/like_2.png")
     }
-    &.kk-apply-1 {
-        width: 90px;
-        height: 26px;
+    &.kk-accept {
+        width: 12px;
+        height: 12px;
+        margin: 0 5px 0 0;
+        position: relative;
+        top: -1px;
         background-size: 100%;
-        background-image: url("../images/apply_1.png")
+        background-image: url("../images/accept.png")
     }
-    &.kk-apply-2 {
-        width: 90px;
-        height: 26px;
+    &.kk-accept.active {
         background-size: 100%;
-        background-image: url("../images/apply_2.png")
-    }
-    &.kk-apply-3 {
-        width: 90px;
-        height: 26px;
-        background-size: 100%;
-        background-image: url("../images/apply_3.png")
+        background-image: url("../images/accept_1.png")
     }
     &.kk-good {
-        width: 74px;
-        height: 26px;
         background-size: 100%;
         background-image: url("../images/good_normal.png")
     }
@@ -183,8 +177,6 @@
         background-image: url("../images/good_active.png")
     }
     &.kk-soso {
-        width: 74px;
-        height: 26px;
         background-size: 100%;
         background-image: url("../images/soso_normal.png")
     }
@@ -192,8 +184,6 @@
         background-image: url("../images/soso_active.png")
     }
     &.kk-bad {
-        width: 74px;
-        height: 26px;
         background-size: 100%;
         background-image: url("../images/bad_normal.png")
     }
