--- a/src/less/index.less
+++ b/src/less/index.less
@@ -395,3 +395,18 @@
     background-color: fade(@gray-base, 50%);
     display: none;
 }
+
+.circle {
+    background-color: @gray-lighter;
+    border-radius: 100%;
+    -webkit-border-radius: 100%;
+    margin-right: 5px;
+    &.icon {
+        width: 20px;
+        height: 20px;
+    }
+    &.icon-70 {
+        width: 70px;
+        height: 70px;
+    }
+}
