--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -6,7 +6,7 @@
 </div>
 <div class="scrollable">
     <div class="scrollable-content">
-        <div class="section large">
+        <div class="section large bg-transparent">
             <div class="text-center">
                 <img ng-src="../images/logo_signin.png" alt="">
             </div>
