--- a/src/templates/translator.html
+++ b/src/templates/translator.html
@@ -19,7 +19,7 @@
                 <span class="block">长居住地：{{translator.address}}</span>
             </div>
             <div class="translator-avatar">
-                <img ng-src="{{staticImageUrl + translator.avatar || '../images/avatar_1.png'}}" alt="">
+                <img ng-src="{{staticImageUrl + translator.avatar || '../images/avatar_1.png'}}" err-src="../images/avatar_1.png" alt="">
             </div>
         </div>
         <div style="margin:8px;">
