--- a/src/templates/usage.html
+++ b/src/templates/usage.html
@@ -6,6 +6,8 @@
 </div>
 <div class="scrollable">
 	<div class="scrollable-content">
-		使用条款
+		<div class="section large bg-transparent">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam quas quos quam accusantium voluptatibus similique, asperiores eaque fugiat labore commodi ab vero exercitationem pariatur earum voluptatem reprehenderit minus explicabo!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere fugiat magnam excepturi explicabo odio accusamus sint consequatur rem dolores a deleniti, in laboriosam, unde deserunt sequi, nostrum ratione quasi beatae.
+		</div>
 	</div>
 </div>
