--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -19,7 +19,7 @@
         <!-- banner -->
         <banner data-options="{}" data-rate="750/175">
             <div class="image-holder" ng-repeat="b in banners" on-repeat-done>
-                <img ng-src="{{staticImageUrl + b.cover}}" class="block full-width" alt="">
+                <img ng-src="{{staticImageUrl + b.cover}}" err-src="../images/banner.png" class="block full-width" alt="">
             </div>
         </banner>
         <!-- filter -->
@@ -40,7 +40,7 @@
         <!-- normal content -->
         <a ng-href="#/tasks/{{task.task_id}}" class="task-section" ng-repeat="task in tasks">
             <div class="section text-ellipsis">
-                <img ng-src="{{staticImageUrl+task.avatar || '../images/avatar.png'}}" width="20px" alt="">
+                <img ng-src="{{staticImageUrl+task.avatar || '../images/avatar.png'}}" err-src="../images/avatar.png" alt="" class="circle icon">
                 {{task.title}}
             </div>
             <div class="section bg-gray-lighter">
