--- a/src/templates/me.html
+++ b/src/templates/me.html
@@ -17,7 +17,7 @@
                 <span class="block">长居住地：香港</span>
             </div>
             <div class="translator-avatar">
-                <img ng-src="{{staticImageUrl + user.avatar || '../images/avatar_1.png'}}" class="block full-width" alt="">
+                <img ng-src="{{staticImageUrl + user.avatar || '../images/avatar_1.png'}}" err-src="../images/avatar_1.png" class="block full-width" alt="">
             </div>
         </div>
         <!-- 擅长语种 -->
