--- a/src/templates/modify_trade_password.html
+++ b/src/templates/modify_trade_password.html
@@ -10,19 +10,22 @@
             <div class="text-center">
                 <img ng-src="../images/logo_signin.png" alt="">
             </div>
-            <form ng-submit="ajaxForm('signin')">
+            <form ng-submit="ajaxForm()" name="modifyForm">
                 <div class="kk-input-group flat">
-                    <input type="text" name="tel_email" class="form-control" placeholder="请输入常用邮箱/手机号" ng-model="input.telephone" required ng-pattern="/(^(13\d|14[57]|15[^4,\D]|17[678]|18\d)\d{8}|170[059]\d{7})$/">
-                    <span class="tip text-warning">error</span>
+                    <input type="text" name="username" class="form-control" placeholder="请输入手机号码/邮箱" ng-model="input.username" required telephone-or-email>
+                    <span class="tip text-warning" ng-show="modifyForm.username.$invalid && modifyForm.username.$dirty">必填,手机或邮箱</span>
                 </div>
                 <div class="kk-input-group flat">
-                    <button type="button" class="btn btn-warning btn-sms">获取验证码</button>
-                    <input type="text" name="smscode" class="form-control" placeholder="请输入验证码" ng-model="input.smscode" required>
-                    <span class="tip text-warning">error</span>
+                    <button type="button" class="btn btn-warning btn-sms" ng-click="getVerifycode()" ng-disabled="callbackTimer.counting || modifyForm.username.$invalid">
+                        <timer id="kkcountdown" interval="1000" countdown="60" auto-start='false' ng-show="callbackTimer.counting" finish-callback="callbackTimer.finish()">{{countdown + 1}}</timer>
+                        获取验证码
+                    </button>
+                    <input type="text" name="verifycode" class="form-control" placeholder="请输入验证码" ng-model="input.verifycode" required>
+                    <span class="tip text-warning" ng-show="modifyForm.verifycode.$invalid && modifyForm.verifycode.$dirty">必填，验证码为6位</span>
                 </div>
                 <div class="kk-input-group flat">
-                    <input type="password" name="password" class="form-control" placeholder="重设密码，至少8位" ng-model="input.password" required>
-                    <span class="tip text-warning">error</span>
+                    <input type="password" name="password" class="form-control" placeholder="请输入登录密码" ng-model="input.password" required ng-minlength=6 ng-maxlength=6 />
+                    <span class="tip text-warning" ng-show="modifyForm.password.$invalid && modifyForm.password.$dirty">必填,密码6位</span>
                 </div>
                 <div class="kk-input-group">
                     <button type="submit" class="btn btn-warning block full-width">修改交易密码</button>
