--- a/src/templates/records.html
+++ b/src/templates/records.html
@@ -6,6 +6,21 @@
 </div>
 <div class="scrollable">
 	<div class="scrollable-content">
-		提现记录
+		<div class="section large m" ng-repeat="record in records">
+			<p>提现提醒</p>
+			<p>{{record.post_time}}</p>
+			<div class="section section-wide">
+				dribehanceLorem	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero rerum alias libero dolores, ea, nihil culpa excepturi a nobis aspernatur officia eligendi, quaerat ut laborum, nostrum. Aspernatur doloribus, iure accusamus.
+			</div>
+			<div class="section"></div>
+			<p>申请提现金额：<span class="text-danger">50</span>元</p>
+			<p>收款银行：<span class="text-gray-light">{{record.bank}}</span></p>
+			<p>收款卡号：<span class="text-gray-light">{{record.bankcard}}</span></p>
+			<p>开户人：<span class="text-gray-light">{{record.nickname}}</span></p>
+			<p ng-show="{{record.status == '1'}}">状态：<span class="text-danger">审核中</span></p>
+			<p ng-show="{{record.status == '2'}}">状态：<span class="text-danger">审核通过，已转账</span></p>
+			<p>提现时间：{{record.pay_time}}</p>
+		</div>
+		<div class="section text-center m" ng-click="loadMore()">{{page.message}}</div>
 	</div>
 </div>
