--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -7,7 +7,7 @@
 </div>
 <div ui-content-for="backAction">
     <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
-        <i class="fa fa-bars"></i>
+        <i class="fa fa-bars text-large"></i>
     </div>
 </div>
 <div class="scrollable">
